--- a/src/components/baseBulitComp/Loading/index.module.scss
+++ b/src/components/baseBulitComp/Loading/index.module.scss
@@ -1,4 +1,4 @@
-@import '../../app.scss';
+@import 'src/app.scss';
 
 .LoadingContainer {
   display: flex;
@@ -15,7 +15,6 @@
     justify-content: space-around;
     width: 80%;
     height: 70%;
-
 
     &__canvas {
       // width: 100%;
