--- a/src/components/baseBuiltComp/FORBIDDEN/index.module.scss
+++ b/src/components/baseBuiltComp/FORBIDDEN/index.module.scss
@@ -14,14 +14,16 @@
     flex-direction: column;
     width: 80%;
     height: 70%;
+    align-items: center;
 
 
     &__canvas {
+      align-items: center;
       // width: 100%;
       // height: 100%;
       // object-fit: cover;
-      width: 100%;
-      height: 40%;
+      // width: 100%;
+      // height: 40%;
     }
 
     &__title {
