--- a/src/components/baseBuiltComp/FORBIDDEN/index.module.scss
+++ b/src/components/baseBuiltComp/FORBIDDEN/index.module.scss
@@ -17,14 +17,7 @@
     align-items: center;
 
 
-    &__canvas {
-      align-items: center;
-      // width: 100%;
-      // height: 100%;
-      // object-fit: cover;
-      // width: 100%;
-      // height: 40%;
-    }
+    &__canvas {}
 
     &__title {
       text-align: center;
