--- a/src/components/baseBuiltComp/HocWrap/components/guide.module.scss
+++ b/src/components/baseBuiltComp/HocWrap/components/guide.module.scss
@@ -15,10 +15,7 @@
     justify-content: space-around;
     width: 80%;
     height: 70%;
-
-    &__canvas {
-      width: 100%;
-    }
+    align-items: center;
 
     &__title {
       text-align: center;
