--- a/src/components/baseBuiltComp/Loading/index.module.scss
+++ b/src/components/baseBuiltComp/Loading/index.module.scss
@@ -6,32 +6,18 @@
 
 .LoadingContainer {
   position: absolute;
+  left: 0;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
-  &__bgContainer {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 80%;
-    height: 70%;
-
-    &__canvas {
-      width: 100%;
-      height: 40%;
-    }
-
-    &__title {
-      text-align: center;
-      font-size: 36px;
-      font-weight: 700;
-      color: $base-element-color;
-    }
+  &__canvas {
+    width: 100%;
+    // height: 40%;
   }
 
 }
