--- a/src/pages/main/Index/index.module.scss
+++ b/src/pages/main/Index/index.module.scss
@@ -1,8 +1,3 @@
-// @font-face {
-//   font-family: AlibabaPuHuiTi;
-//   src: url('https://hx.404fwf.cn/notifyBoard/AlibabaPuHuiTi.ttf');
-// }
-
 view {
   box-sizing: border-box;
 }
@@ -15,25 +10,10 @@ view {
   height: 100vh;
   background-color: #fff;
 
-  .header-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 250rpx;
-    background-color: aqua;
-  }
-
   /** 搜索框 */
   .search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 690rpx;
     height: 80rpx;
-    padding: 0 30rpx 0 30rpx;
-    border: 5rpx solid black;
-    margin-top: -2vh;
   }
 
   /** 标题栏 */
@@ -54,7 +34,7 @@ view {
 
   .lists {
     width: 100%;
-    height: calc(100vh - 230rpx - 80rpx - 80rpx);
+    height: calc(100vh - 80rpx - 80rpx);
     overflow-y: scroll;
   }
 }
